# conduit-runtime-environment

./: .gitignore  CITATIONS.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  NOTICE  README.md  TECHNOLOGY_MAP.md
benchmarks/: CMakeLists.txt  bench_cache_line_false_sharing.cpp  bench_conduit.cpp  bench_http.cpp  bench_latency_histogram.cpp  bench_pipeline_dispatch.cpp  bench_producer_consumer.cpp  bench_wrap_around.cpp
cmake/: axiomConfig.cmake.in  conduitConfig.cmake.in
docs/adrs/: 001_REJECT_OOP_INHERITANCE.md  002_UNION_BASED_SLAB_POOL.md  003_BAN_MPSC_QUEUES.md
docs/architecture/: BENCHMARK_METHODOLOGY.md  CORE_PRINCIPLES.md  MEMORY_MODEL_AND_PHYSICS.md  THE_8_LAYER_STACK.md  TOPOLOGY_AND_BACKPRESSURE.md
docs/operations/: DEPLOYMENT_AND_TUNING.md  SRE_TROUBLESHOOTING_RUNBOOK.md
docs/tutorials/: 01_CONCEPTS_AND_PIPELINES.md  02_MEMORY_POOL_IN_PRACTICE.md  03_CLUSTERS_AND_ROUTING.md
examples/: 01_basic_pipeline.cpp  02_cxx20_heterogeneous_dispatch.cpp  03_cascading_heterogeneous_pipeline.cpp  04_lockfree_threading.cpp  05_sharded_cluster_routing.cpp  05_sharded_cluster_routing.cpp-disabled  06_deterministic_fan_in_polling.cpp  07_hardware_isolated_sharding.cpp  07_hardware_isolated_sharding.cpp-disabled  08_backpressure_and_zero_leak_drops.cpp  11_stateful_order_book_padding.cpp  12_heartbeat_and_timeout_injection.cpp  13_graceful_drain_on_sigint.cpp  CMakeLists.txt
examples/01_core_patterns/: 01_cascading_pipeline.cpp  02_cxx20_concepts.cpp
examples/02_concurrency_and_routing/: 01_lockfree_spsc_bus.cpp  02_fan_in_polling.cpp  03_sharding.cpp  04_hardware_isolated_sharding.cpp-disabled
examples/03_resilience_and_control/: 01_backpressure_drops.cpp  02_heartbeat_timeouts.cpp  03_graceful_drain.cpp  04_cache_line_isolation.cpp
examples/04_showcase/: 01_autonomous_drone_ecs.cpp  02_deterministic_network_routing.cpp  03_zero_allocation_hotpath.cpp  04_ultimate_logic_synthetis.cpp
examples/product/: deterministic_saga.cpp-disabled
examples/src/: conduit_ignition.cpp-disabled
include/axiom/: axiom.hpp
include/axiom_conduit/: core.hpp
include/axiom_conduit/net/: networked_conduit.hpp
include/axiom_conduit/runtime/: node_runtime.hpp
include/conduit/: core.hpp
include/conduit/core/: networked_conduit.hpp  physical_layout.hpp  pinned_slab_allocator.hpp  slab_allocator.hpp  timing_wheel.hpp
include/conduit/domain/: moe_spark.hpp
include/conduit/io/: clock_node.hpp
include/conduit/net/: mesh_router.hpp  networked_conduit.hpp
include/conduit/runtime/: node_runtime.hpp
include/conduit/storage/: durable_sink.hpp  durable_storage.hpp
include/conduit/supplemental/: async_logger.hpp  environment.hpp  load_generator.hpp  prometheus_exporter.hpp  telemetry.hpp  telemetry_gateway.hpp
include/conduit/telemetry/: telemetry.hpp
include/conduit/transport/: http.hpp  http_gateway.hpp
include/conduit/workflow/: state_machine.hpp
roadmap_examples/: 09_network_zero_copy_ingress.cpp  10_layer9_wiretap_inspection.cpp
roadmap_tests/: test_network_boundaries.cpp
tests/: CMakeLists.txt  test_conduit.cpp  test_conduit_physics.cpp  test_event_ptr.cpp  test_full_dispatch_chain.cpp  test_hierarchical_dispatch_chain.cpp  test_hierarchical_execution_order.cpp  test_horizontal_pipeline_flow.cpp  test_load_generator.cpp  test_memory_physics.cpp  test_mixed_dispatch_matrix.cpp  test_pipeline_ignored_events.cpp  test_pipeline_semantics.cpp  test_poller_edge_cases.cpp  test_pool.cpp  test_pool.cpp-disabled  test_round_robin_switch.cpp  test_single_handler_cascade.cpp  test_type_safety_invariants.cpp
tests/net/: CMakeLists.txt  test_networked_conduit.cpp
tests/runtime/: test_node_runtime.cpp  test_node_runtime.cpp-disabled
tests/transport/: CMakeLists.txt  test_http.cpp
